--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-
+<nav>
+  <ul>
+    <li><a routerLink = "/home">Startsida</a></li>
+    <li><a routerLink = "/mycourses">Mitt ramschema</a></li>
+  </ul>
+</nav>
 <router-outlet />
