--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,7 @@
-<h2>Alla kurser</h2>
+<main id="main_home">
+<h2>M5 Universitetets kurser</h2>
+
+<label for="search">Filtrera kurser: </label>
+<input type="text" id="search" name="search">
+
+</main>
