--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,36 @@
+h2, label {
+    padding: 10px 0 10px 50px;
+}
+
+input, select {
+    height: 28px;
+}
+
 #coursetable {
     width: 90%;
+    margin: auto;
+    line-height: 1.5em;
+    padding-top: 50px;
+}
+
+#coursetable tr:nth-child(odd)  {
+   background-color: rgba(32, 100, 100, 0.068);
+}
+
+#coursetable thead tr {
+    background-color: rgb(32, 100, 100);
+    color: #fff;
+}
+
+#coursetable th {
+    padding: 2px 10px;
+    text-align: left;
+}
+
+#coursetable th:nth-child(6) {
+    white-space: nowrap;
+}
+
+#coursetable td {
+    padding: 10px 5px;
 }
