--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,7 +1,9 @@
 footer {
-    height: 100px;
+    height: 80px;
     width: 100%;
     text-align: center;
+    font-size: 24px;
+    padding-top: 20px;
     background-color: rgb(32, 100, 100);
     position: fixed;
     bottom: 0;
