--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,10 @@
 header {
     width: 100%;
-    height: 100px;
+    height: 150px;
+}
+
+h1 {
+    padding: 30px;
 }
 
 #navcontainer {
@@ -32,6 +36,6 @@ nav ul li a {
 }
 
 .current {
-    background-color: rgb(53, 160, 160);
+    background-color:  rgb(48, 145, 145);
     padding: 11px;
 }
