--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,16 +1,23 @@
 h2, label {
-    padding: 10px 0 10px 50px;
+    padding: 20px 0 20px 50px;
 }
 
 input, select {
     height: 28px;
+    width: 30%;
+}
+
+#quantity {
+    padding: 30px 0 0 50px;
+    font-size: 20px;
+    color: rgb(116, 111, 111);
 }
 
 #coursetable {
     width: 90%;
     margin: auto;
     line-height: 1.5em;
-    padding-top: 50px;
+    padding-top: 40px;
 }
 
 #coursetable tr:nth-child(odd)  {
