--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,7 +32,7 @@
                 <td>{{course.points}}</td>
                 <td>{{course.subject}}</td>
                 <td><a [href]="course.syllabus" target="_blank">Kursplan</a></td>
-                <td>knapp</td>
+                <td><button id="addBtn">Lägg till</button></td>
             </tr>
         </tbody>
     </table>
