--- a/src/app/my-courses/my-courses.component.html
+++ b/src/app/my-courses/my-courses.component.html
@@ -1,1 +1,31 @@
-<h2>Mitt Ramschema</h2>
+
+<main id="main_home">
+    <h2>Mitt ramschema</h2>
+
+    <!-- div for showing number of courses shown -->
+    <div id="quantity"> Antal kurser: st.</div>
+    
+    <table id="coursetable">
+        <thead>
+            <tr>
+                <th>Kurskod </th>
+                <th>Kursnamn </th>
+                <th>Poäng </th>
+                <th>Ämne </th>
+                <th>Kursplan</th>
+                <th>Ta Bort</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr >
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><button id="addBtn">X</button></td>
+            </tr>
+        </tbody>
+    </table>
+
+</main>
