--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,6 +14,7 @@
     <!-- div for showing number of courses shown -->
     <div id="quantity"> Antal kurser: {{ filteredCount }} st.</div>
     
+   <div id="table_container">
     <table id="coursetable">
         <thead>
             <tr>
@@ -32,9 +33,10 @@
                 <td>{{course.points}}</td>
                 <td>{{course.subject}}</td>
                 <td><a [href]="course.syllabus" target="_blank">Kursplan</a></td>
-                <td><button id="addBtn">Lägg till</button></td>
+                <td><button id="addBtn" (click)="addToMyCourses(course)">Lägg till</button></td>
             </tr>
         </tbody>
     </table>
+   </div>
 
 </main>
