--- a/src/app/my-courses/my-courses.component.html
+++ b/src/app/my-courses/my-courses.component.html
@@ -4,6 +4,8 @@
 
     <!-- div for showing number of courses shown -->
     <div id="quantity_timetable"> Antal kurser: {{myCourses.length}}st.</div>
+
+    <div id="totalpoints">Totalt antal poäng: {{totalPoints}}</div>
     
     <table id="myCourseTable">
         <thead>
