--- a/src/app/my-courses/my-courses.component.css
+++ b/src/app/my-courses/my-courses.component.css
@@ -1,3 +1,11 @@
 h2{
     padding: 20px 0 20px 50px;
 }
+
+#removeBtn {
+    cursor: pointer;
+    padding: 4px;
+    background-color: brown;
+    border-radius: 3px;
+    color: #fff;
+}
