--- a/src/app/my-courses/my-courses.component.css
+++ b/src/app/my-courses/my-courses.component.css
@@ -1,11 +1,55 @@
-h2{
-    padding: 20px 0 20px 50px;
+#main_timetable {
+    width: 100%;
+    max-width: 900px;
+    margin: auto;
+}
+
+h2 {
+    padding: 30px 0 20px 25px;
+}
+
+#quantity_timetable, #totalpoints {
+    padding: 10px 0 0 50px;
+    font-size: 20px;
+    color: rgb(87, 83, 83);
+}
+
+#myCourseTable {
+    width: 95%;
+    margin: auto;
+    line-height: 1.5em;
+    padding-top: 20px;
+    padding-bottom: 200px;
+}
+
+#myCourseTable tr:nth-child(odd) {
+    background-color: rgba(32, 100, 100, 0.068);
+}
+
+#myCourseTable thead tr {
+    background-color: rgb(32, 100, 100);
+    color: #fff;
+}
+
+#myCourseTable thead th {
+    padding: 4px 10px;
+    text-align: left;
+}
+
+#myCourseTable td {
+    padding: 10px 5px;
+}
+
+#removeBtnSection {
+    text-align: center;
 }
 
 #removeBtn {
     cursor: pointer;
-    padding: 4px;
-    background-color: brown;
+
+    background-color: rgb(202, 37, 37);
     border-radius: 3px;
     color: #fff;
+    font-size: 16px;
+    padding: 0 3px;
 }
