--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,7 +33,7 @@
                 <td>{{course.points}}</td>
                 <td>{{course.subject}}</td>
                 <td><a [href]="course.syllabus" target="_blank">Kursplan</a></td>
-                <td><button id="addBtn" (click)="addToMyCourses(course)">Lägg till</button></td>
+                <td id="addBtnSection"><button id="addBtn" (click)="addToMyCourses(course)">+</button></td>
             </tr>
         </tbody>
     </table>
