--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -20,17 +20,24 @@ select {
 }
 
 #quantity {
-    padding: 40px 0 0 50px;
+    padding: 40px 0 20px 50px;
     font-size: 20px;
     color: rgb(116, 111, 111);
 }
 
+#table_container {
+    width: 100%;
+}
+
 #coursetable {
-    width: 95%;
+    width: 100%;
     margin: auto;
-    line-height: 1.5em;
-    padding-top: 20px;
-    padding-bottom: 200px;
+    line-height: 1.2em; 
+    padding: 5px;
+    margin-bottom: 200px;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px grey;
 }
 
 #coursetable tr:nth-child(odd) {
@@ -38,59 +45,69 @@ select {
 }
 
 #coursetable thead tr {
-
     background-color: rgb(32, 100, 100);
     color: #fff;
 }
 
 #coursetable thead th {
-
     padding: 4px 10px;
     text-align: left;
+}
+
+#coursetable thead th:nth-child(6) {
+    white-space: nowrap;
 }
 
 .headerAndArrow:hover {
     cursor: pointer;
     text-decoration: underline;
-
-}
-
-#coursetable th:nth-child(6) {
-    white-space: nowrap;
 }
 
 #coursetable td {
-    padding: 10px 5px;
+    padding: 5px;
 }
 
+#addBtnSection {
+    text-align: center;
+}
 
 #addBtn {
-    padding: 5px 7px;
+    padding: 2px 7px;
     background-color: rgb(32, 100, 100);
     color: #fff;
+    font-size: 20px;
     border-radius: 3px;
     cursor: pointer;
-
 }
 
-/* Stilar för meddelandediv */
-.added-message {
-    position: fixed;
-    top: -100px; /* Göm div ovanför sidans övre kant */
-    left: 0;
-    width: 100%;
-    height: 100px;
-    background-color: #fff; /* Justera bakgrundsfärgen efter behov */
-    text-align: center;
-    line-height: 100px; /* Justera linjehöjden för vertikal centrerad text */
-    transition: top 0.5s ease; /* Använd CSS-övergång för att animera rörelsen */
-  }
-  
-  /* Stilar för att visa meddelandediv */
-  .added-message.show {
-    top: 0; /* Visa div genom att flytta den nedåt */
-  }
-  
+@media screen and (max-width: 800px) {
 
+    h2 {
+        font-size: 20px;
+    }
 
-@media screen and (max-width: 600px) {}
+    #quantity {
+        padding: 40px 0 0 50px;
+        font-size: 14px;
+        color: rgb(116, 111, 111);
+    }
+
+    #coursetable {
+        width: 100%;
+        margin: auto;
+        line-height: 1em;
+        font-size: 14px;
+        margin: 20px 0 200px 0;
+    }
+    
+    #coursetable thead th {
+        padding: 4px 5px;
+        text-align: left;
+    }
+
+    #coursetable td {
+        padding: 3px;
+    }
+
+   
+}
