--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,6 @@
     margin: 0;
 }
 body {
-    width: 100vw;
+    width: 100%;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
