lagt till knapp att gå till första och sista sidan

--- a/src/app/pagination/pagination.component.html
+++ b/src/app/pagination/pagination.component.html
@@ -1,5 +1,7 @@
 <div class="pagination">
+    <button class="pageinationBtn" (click)="goToFirstPage()">Sida 1</button>
     <button class="pageinationBtn" (click) = "prevPage()">Föregående</button>
     <span> {{currentPage}} / {{totalPages}} </span>
     <button class="pageinationBtn"  (click) = "nextPage()">Nästa</button>
+    <button class="pageinationBtn" (click)="goToLastPage()">Sida {{totalPages}}</button>
 </div>
