--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -20,7 +20,7 @@ select {
 }
 
 #quantity {
-    padding: 40px 0 20px 50px;
+    padding: 30px 0 20px 50px;
     font-size: 20px;
     color: rgb(116, 111, 111);
 }
@@ -78,6 +78,12 @@ select {
     font-size: 20px;
     border-radius: 3px;
     cursor: pointer;
+}
+
+.no-courses-message {
+    padding: 20px 0 0 50px;
+    font-size: 18px;
+    color: rgb(243, 146, 18);
 }
 
 
