--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,6 +8,10 @@ h2,
 label {
     padding: 20px 0 20px 50px;
 }
+p {
+    font-size: 18px;
+    padding: 20px 0 30px 50px;
+}
 
 input {
     height: 28px;
@@ -27,6 +31,7 @@ select {
 
 #table_container {
     width: 100%;
+    margin-bottom: 200px;
 }
 
 #coursetable {
