lagt till en sida som startsida med fiktiv info om universitetet mm och stylat

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,8 @@
     <div id="navcontainer">
         <nav>
             <ul>
-                <li><a routerLink="/home" routerLinkActive="current">Alla kurser</a></li>
+                <li><a routerLink="/home" routerLinkActive="current">Startsida</a></li>
+                <li><a routerLink="/courselist" routerLinkActive="current">Alla kurser</a></li>
                 <li><a routerLink="/mycourses" routerLinkActive="current">Mitt ramschema</a></li>
             </ul>
         </nav>
