--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,16 +1,23 @@
 header {
     width: 100%;
-    height: 150px;
+    height: 250px;
+    background-image: url('/assets/images/header.avif');
+    background-size: cover;
+    background-position: center;
 }
 
 h1 {
-    padding: 30px;
+   padding: 50px 0 0 150px;
+    color: #fff;
+    font-size: 52px;
 }
 
 #navcontainer {
     height: 50px;
     width: 100%;
     background-color: rgb(32, 100, 100);
+    position: relative;
+    top: 92px;
 }
 
 nav ul {
