--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,127 +1,146 @@
 #main_home {
-    width: 100%;
-    max-width: 900px;
+    display: grid;
+    grid-template-columns: 12fr;
+    grid-template-rows: 100px 200px 50vh;   
     margin: auto;
-}
-
-h2,
-label {
-    padding: 20px 0 20px 50px;
-}
-p {
-    font-size: 18px;
-    padding: 20px 0 30px 50px;
-}
-
-input {
-    height: 28px;
-    width: 300px;
-}
-
-select {
-    height: 32px;
-    width: 333px;
-}
-
-#quantity {
-    padding: 30px 0 20px 50px;
-    font-size: 20px;
-    color: rgb(116, 111, 111);
-}
-
-#table_container {
-    width: 100%;
-    margin-bottom: 200px;
-}
-
-#coursetable {
-    width: 100%;
-    margin: auto;
-    line-height: 1.2em; 
-    padding: 5px;
-    margin-bottom: 20px;
-    border: 1px solid lightgrey;
-    border-radius: 5px;
-    box-shadow: 5px 5px 10px grey;
-}
-
-#coursetable tr:nth-child(odd) {
-    background-color: rgba(32, 100, 100, 0.068);
-}
-
-#coursetable thead tr {
-    background-color: rgb(32, 100, 100);
-    color: #fff;
-}
-
-#coursetable thead th {
-    padding: 4px 10px;
-    text-align: left;
-}
-
-#coursetable thead th:nth-child(6) {
-    white-space: nowrap;
-}
-
-.headerAndArrow:hover {
-    cursor: pointer;
-    text-decoration: underline;
-}
-
-#coursetable td {
-    padding: 5px;
-}
-
-#addBtnSection {
     text-align: center;
+    padding-bottom: 150px;
+}
+h2 {
+    padding: 30px;
+    font-size: 32px;
+    grid-column: 1/13;
+    grid-row: 1/2;
 }
 
-#addBtn {
-    padding: 2px 7px;
-    background-color: rgb(32, 100, 100);
-    color: #fff;
-    font-size: 20px;
-    border-radius: 3px;
-    cursor: pointer;
+.image-container {
+    position: relative;
+    width: 98%; 
+    max-width: 700px;/* Anpassa bredden för att passa tre bilder bredvid varandra */
+    margin: 5px;
 }
 
-.no-courses-message {
-    padding: 20px 0 0 50px;
-    font-size: 18px;
-    color: rgb(243, 146, 18);
+#grid1 {
+    font-size:24px;
+    font-family: 'Courier New', Courier, monospace, 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-shadow: 5px 5px 10px grey;
+    padding-top: 20px;
+    grid-column: 5/9;
+    grid-row: 2/3;
 }
 
+#grid2 {
+    grid-column: 1/5;
+    grid-row: 3/4;
+    width: 98%;
+}
 
-  
+#grid3 {
+    grid-column: 5/9;
+    grid-row: 3/4;
+    width: 98%;
+}
 
-@media screen and (max-width: 800px) {
+#grid4 {
+    grid-column: 9/13;
+    grid-row: 3/4;
+    width: 98%;
+}
 
-    h2 {
-        font-size: 20px;
+#grid5 {
+    grid-column: 2/6;
+    grid-row: 4/5;
+    width: 98%;
+}
+
+#grid6 {
+    grid-column: 8/12;
+    grid-row: 4/5;
+    width: 98%;
+}
+
+.image-container,
+#grid1,
+#grid2,
+#grid3,
+#grid4,
+#grid5,
+#grid6 {
+    text-align: center; /* Centrerar allt innehåll horisontellt */
+}
+
+#img_uni,
+#img_education,
+#img_science,
+#img_campus,
+#img_student {
+    width: 100%;
+    max-width: 100%;
+    margin: auto;
+}
+
+.image-text {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    text-align: center;
+    color: white;
+    padding: 15px 0;
+}
+
+@media screen and (max-width: 800px)  {
+    #main_home {
+        grid-template-columns: 100%;
+        grid-template-rows: auto;  
+     
     }
 
-    #quantity {
-        padding: 40px 0 0 50px;
-        font-size: 14px;
-        color: rgb(116, 111, 111);
-    }
-
-    #coursetable {
-        width: 100%;
-        margin: auto;
-        line-height: 1em;
-        font-size: 14px;
-        margin: 20px 0 200px 0;
+    h2 {        
+        font-size: 28px;
+        grid-column: 1/2;
+        grid-row: 1/2;
     }
     
-    #coursetable thead th {
-        padding: 4px 5px;
-        text-align: left;
+    #grid1 {
+        font-size:24px;
+        font-family: 'Courier New', Courier, monospace, 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        text-shadow: 5px 5px 10px grey;
+        padding-top: 20px;
+        grid-column: 1/2;
+        grid-row: 2/3;
+        margin: auto;
     }
 
-    #coursetable td {
-        padding: 3px;
+    #grid2 {
+        grid-column: 1/2;
+        grid-row: 3/4;
+        width: 98%;
+       text-align: center;
     }
-
-   
+    
+    #grid3 {
+        grid-column: 1/2;
+        grid-row: 4/5;
+        width: 98%;
+    }
+    
+    #grid4 {
+        grid-column: 1/2;
+        grid-row: 5/6;
+        width: 98%;
+    }
+    
+    #grid5 {
+        grid-column: 1/2;
+        grid-row: 6/7;
+        width: 98%;
+    }
+    
+    #grid6 {
+        grid-column: 1/2;
+        grid-row: 7/8;
+        width: 98%;
+    }
 }
