--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,50 +2,63 @@
 
 <main id="main_home">
 
-    <h2>M5 Universitetets kurser</h2>
-    <p>Sök bland våra kurser och skapa ditt egna ramschema. </p>
+    <h2>Välkommen!</h2>
+  <section id="grid1">
+    <p>Är du sugen på att studera i höst kan du kolla in vårt kursutbud <a href="courselist">här</a>.</p>
+  </section>
 
-    <label for="search">Sök kurser: </label>
-    <input type="text" id="search" name="search" [(ngModel)]="searchInput" (input)="searchCourses()">
-    <br><br>
+    <section id="grid2">
+        <div class="image-container">
+            <img src="assets/images/uni.jpg" alt="building" id="img_uni">
+            <div class="image-text">
+              <h3>Universitetet</h3>
+            </div>
+          </div>  
+        <!-- Photo by <a href="https://unsplash.com/@joyshotsphotography?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Erika Fletcher</a> on <a href="https://unsplash.com/photos/brown-and-white-concrete-building-MZxqc6n9qCw?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>-->
+    </section>
 
-    <label for="subjectFilter">Ämne: </label>
-    <select name="subjectFilter" id="subjectFilter" (change)="filterCoursesBySubject($event)">
-        <option value="">Alla ämnen</option>
-        <option *ngFor="let subject of uniqueSubjects" [value]="subject" id="sub">{{ subject }}</option>
-    </select>
 
+    <section id="grid3">
+        <div class="image-container">
+            <img src="assets/images/utbildning.jpg" alt="books" id="img_education">
+            <div class="image-text">
+              <h3>Utbildning</h3>
+            </div>
+          </div>          
+        <!-- Photo by <a href="https://unsplash.com/@elisa_cb?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Elisa Calvet B.</a> on <a href="https://unsplash.com/photos/white-book-on-brown-wooden-table-S3nUOqDmUvc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> -->
+    </section>
 
-    <div *ngIf="courselist.length === 0" class="no-courses-message">Inga kurser hittades.</div>
-    <div id="quantity"> Antal kurser: {{ filteredCount }} st.</div>
+    <section id="grid4">
+        <div class="image-container">
+            <img src="assets/images/science.jpg" alt="science" id="img_science">
+            <div class="image-text">
+              <h3>Forskning</h3>
+            </div>
+          </div>  
+        <!-- Photo by <a href="https://unsplash.com/@moritz_photography?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Moritz Kindler</a> on <a href="https://unsplash.com/photos/a-close-up-of-a-blue-light-in-the-dark-G66K_ERZRhM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>-->
+    </section>
 
-    <div id="table_container">
-        <table id="coursetable">
-            <thead>
-                <tr>
-                    <th class="headerAndArrow" (click)="sortCourses('courseCode')">Kurskod </th>
-                    <th class="headerAndArrow" (click)="sortCourses('courseName')">Kursnamn </th>
-                    <th class="headerAndArrow" (click)="sortCourses('points')">Poäng </th>
-                    <th class="headerAndArrow" (click)="sortCourses('subject')">Ämne </th>
-                    <th>Kursplan</th>
-                    <th>Lägg till</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let course of courselist| paginate:{itemsPerPage:20, currentPage:page, totalItems: totalLength}">
-                    <td>{{course.courseCode}}</td>
-                    <td>{{course.courseName}}</td>
-                    <td>{{course.points}}</td>
-                    <td>{{course.subject}}</td>
-                    <td><a [href]="course.syllabus" target="_blank">Kursplan</a></td>
-                    <td id="addBtnSection"><button id="addBtn" (click)="addToMyCourses(course)">+</button></td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="pagination">
-            <pagination-controls (pageChange) ="page=$event"></pagination-controls>
-        </div>
-    </div>
+   
+    <section id="grid5">
+        <div class="image-container">
+            <img src="assets/images/campus.jpg" alt="bild" id="img_campus">
+            <div class="image-text">
+              <h3>Campus</h3>
+            </div>
+          </div>  
+        <!-- Photo by <a href="https://unsplash.com/@parkergibbons?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Parker Gibbons</a> on <a href="https://unsplash.com/photos/aerial-photography-green-and-white-concrete-building-kfwPJieZVwI?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>-->
+    </section>
+
+    <section id="grid6">
+        <div class="image-container">
+            <img src="assets/images/students.jpg" alt="students" id="img_student">
+            <div class="image-text">
+              <h3>Studentkåren</h3>
+            </div>
+          </div>  
+        <!--Photo by <a href="https://unsplash.com/@timmossholder?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Tim Mossholder</a> on <a href="https://unsplash.com/photos/photography-of-five-people-near-outdoor-during-daytime-hOF1bWoet_Q?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>-->
+    </section>
+
 </main>
 
 
