--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
 
     <section id="grid2">
         <div class="image-container">
-            <img src="assets/images/uni.jpg" alt="building" id="img_uni">
+            <img src="assets/images/uni.jpeg" alt="building" id="img_uni">
             <div class="image-text">
               <h3>Universitetet</h3>
             </div>
@@ -20,7 +20,7 @@
 
     <section id="grid3">
         <div class="image-container">
-            <img src="assets/images/utbildning.jpg" alt="books" id="img_education">
+            <img src="assets/images/utbildning.jpeg" alt="books" id="img_education">
             <div class="image-text">
               <h3>Utbildning</h3>
             </div>
@@ -30,7 +30,7 @@
 
     <section id="grid4">
         <div class="image-container">
-            <img src="assets/images/science.jpg" alt="science" id="img_science">
+            <img src="assets/images/science.jpeg" alt="science" id="img_science">
             <div class="image-text">
               <h3>Forskning</h3>
             </div>
@@ -41,7 +41,7 @@
    
     <section id="grid5">
         <div class="image-container">
-            <img src="assets/images/campus.jpg" alt="bild" id="img_campus">
+            <img src="assets/images/campus.jpeg" alt="bild" id="img_campus">
             <div class="image-text">
               <h3>Campus</h3>
             </div>
@@ -51,7 +51,7 @@
 
     <section id="grid6">
         <div class="image-container">
-            <img src="assets/images/students.jpg" alt="students" id="img_student">
+            <img src="assets/images/students.jpeg" alt="students" id="img_student">
             <div class="image-text">
               <h3>Studentkåren</h3>
             </div>
