--- a/src/app/my-courses/my-courses.component.html
+++ b/src/app/my-courses/my-courses.component.html
@@ -7,6 +7,7 @@
 
     <div id="totalpoints">Totalt antal poäng: {{totalPoints}} HP</div>
     
+ <div id="table_container">
     <table id="myCourseTable">
         <thead>
             <tr>
@@ -29,5 +30,6 @@
             </tr>
         </tbody>
     </table>
+ </div>
 
 </main>
