--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -2,8 +2,8 @@ footer {
     height: 80px;
     width: 100%;
     text-align: center;
-    font-size: 24px;
-    padding-top: 20px;
+    font-size: 18px;
+    padding: 10px;
     background-color: rgb(32, 100, 100);
     position: fixed;
     bottom: 0;
