--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,8 @@
 <footer>
-    Anne-Lii Hansen
+    <p>Kontakt:<br>
+        Telefon: 08-12 12 123<br>
+        Mail: info&#64;m5universitetet.se<br>
+        &copy; Anne-Lii Hansen
+
+    </p>
 </footer>
