--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,10 +1,11 @@
 #main_home {
     display: grid;
-    grid-template-columns: 12fr;
-    grid-template-rows: 100px 200px 50vh;   
+    grid-template-columns: auto;
+    grid-template-rows: auto 100px auto;   
     margin: auto;
     text-align: center;
     padding-bottom: 150px;
+    max-width: 1260px;
 }
 h2 {
     padding: 30px;
@@ -15,17 +16,17 @@ h2 {
 
 .image-container {
     position: relative;
-    width: 98%; 
-    max-width: 700px;/* Anpassa bredden för att passa tre bilder bredvid varandra */
+    width: 100%;
     margin: 5px;
 }
 
+/*text*/
 #grid1 {
     font-size:24px;
     font-family: 'Courier New', Courier, monospace, 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-shadow: 5px 5px 10px grey;
     padding-top: 20px;
-    grid-column: 5/9;
+    grid-column: 1/13;
     grid-row: 2/3;
 }
 
@@ -33,18 +34,21 @@ h2 {
     grid-column: 1/5;
     grid-row: 3/4;
     width: 98%;
+   
 }
 
 #grid3 {
     grid-column: 5/9;
     grid-row: 3/4;
     width: 98%;
+   
 }
 
 #grid4 {
     grid-column: 9/13;
     grid-row: 3/4;
     width: 98%;
+  
 }
 
 #grid5 {
@@ -59,15 +63,6 @@ h2 {
     width: 98%;
 }
 
-.image-container,
-#grid1,
-#grid2,
-#grid3,
-#grid4,
-#grid5,
-#grid6 {
-    text-align: center; /* Centrerar allt innehåll horisontellt */
-}
 
 #img_uni,
 #img_education,
@@ -90,14 +85,14 @@ h2 {
     padding: 15px 0;
 }
 
-@media screen and (max-width: 800px)  {
+@media screen and (max-width: 612px)  {
     #main_home {
         grid-template-columns: 100%;
-        grid-template-rows: auto;  
-     
+        grid-template-rows: auto;
     }
 
-    h2 {        
+    h2 {   
+        padding-top: 80px;     
         font-size: 28px;
         grid-column: 1/2;
         grid-row: 1/2;
@@ -107,40 +102,42 @@ h2 {
         font-size:24px;
         font-family: 'Courier New', Courier, monospace, 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         text-shadow: 5px 5px 10px grey;
-        padding-top: 20px;
+        padding: 20px 30px;
         grid-column: 1/2;
-        grid-row: 2/3;
-        margin: auto;
+        grid-row: 2/3;       
     }
 
+    .image-container {
+        margin: 5px 0;
+    }
     #grid2 {
         grid-column: 1/2;
         grid-row: 3/4;
-        width: 98%;
-       text-align: center;
+        width: 100%;
+        padding-top: 40px;
     }
     
     #grid3 {
         grid-column: 1/2;
         grid-row: 4/5;
-        width: 98%;
+        width: 100%;
     }
     
     #grid4 {
         grid-column: 1/2;
         grid-row: 5/6;
-        width: 98%;
+        width: 100%;
     }
     
     #grid5 {
         grid-column: 1/2;
         grid-row: 6/7;
-        width: 98%;
+        width: 100%;
     }
     
     #grid6 {
         grid-column: 1/2;
         grid-row: 7/8;
-        width: 98%;
+        width: 100%;
     }
 }
