--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>M5 Universitetet</h1>
+    <img src="assets/images/logo.png" alt="logotype">
     <div id="navcontainer">
         <nav>
             <ul>
