--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,64 +1,73 @@
-
-
 <main id="main_home">
 
-    <h2>Välkommen!</h2>
+  <h2>Välkommen!</h2>
   <section id="grid1">
     <p>Är du sugen på att studera i höst kan du kolla in vårt kursutbud <a href="courselist">här</a>.</p>
   </section>
 
-    <section id="grid2">
-        <div class="image-container">
-            <img src="assets/images/uni.jpeg" alt="building" id="img_uni">
-            <div class="image-text">
-              <h3>Universitetet</h3>
-            </div>
-          </div>  
-        <!-- Photo by <a href="https://unsplash.com/@joyshotsphotography?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Erika Fletcher</a> on <a href="https://unsplash.com/photos/brown-and-white-concrete-building-MZxqc6n9qCw?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>-->
-    </section>
+  <section id="grid2">
+    <div class="image-container">
+      <img src="assets/images/uni.jpeg" alt="building" id="img_uni">
+      <div class="image-text">
+        <h3>Universitetet</h3>
+      </div>
+    </div>
+    Photo by <a
+      href="https://unsplash.com/@joyshotsphotography?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Erika
+      Fletcher</a> on <a
+      href="https://unsplash.com/photos/brown-and-white-concrete-building-MZxqc6n9qCw?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+  </section>
 
+  <section id="grid3">
+    <div class="image-container">
+      <img src="assets/images/utbildning.jpeg" alt="books" id="img_education">
+      <div class="image-text">
+        <h3>Utbildning</h3>
+      </div>
+    </div>
+    Photo by <a
+      href="https://unsplash.com/@elisa_cb?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Elisa
+      Calvet B.</a> on <a
+      href="https://unsplash.com/photos/white-book-on-brown-wooden-table-S3nUOqDmUvc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+  </section>
 
-    <section id="grid3">
-        <div class="image-container">
-            <img src="assets/images/utbildning.jpeg" alt="books" id="img_education">
-            <div class="image-text">
-              <h3>Utbildning</h3>
-            </div>
-          </div>          
-        <!-- Photo by <a href="https://unsplash.com/@elisa_cb?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Elisa Calvet B.</a> on <a href="https://unsplash.com/photos/white-book-on-brown-wooden-table-S3nUOqDmUvc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> -->
-    </section>
+  <section id="grid4">
+    <div class="image-container">
+      <img src="assets/images/science.jpeg" alt="science" id="img_science">
+      <div class="image-text">
+        <h3>Forskning</h3>
+      </div>
+    </div>
+    Photo by <a
+      href="https://unsplash.com/@moritz_photography?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Moritz
+      Kindler</a> on <a
+      href="https://unsplash.com/photos/a-close-up-of-a-blue-light-in-the-dark-G66K_ERZRhM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+  </section>
 
-    <section id="grid4">
-        <div class="image-container">
-            <img src="assets/images/science.jpeg" alt="science" id="img_science">
-            <div class="image-text">
-              <h3>Forskning</h3>
-            </div>
-          </div>  
-        <!-- Photo by <a href="https://unsplash.com/@moritz_photography?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Moritz Kindler</a> on <a href="https://unsplash.com/photos/a-close-up-of-a-blue-light-in-the-dark-G66K_ERZRhM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>-->
-    </section>
+  <section id="grid5">
+    <div class="image-container">
+      <img src="assets/images/campus.jpeg" alt="bild" id="img_campus">
+      <div class="image-text">
+        <h3>Campus</h3>
+      </div>
+    </div>
+    Photo by <a
+      href="https://unsplash.com/@parkergibbons?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Parker
+      Gibbons</a> on <a
+      href="https://unsplash.com/photos/aerial-photography-green-and-white-concrete-building-kfwPJieZVwI?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+  </section>
 
-   
-    <section id="grid5">
-        <div class="image-container">
-            <img src="assets/images/campus.jpeg" alt="bild" id="img_campus">
-            <div class="image-text">
-              <h3>Campus</h3>
-            </div>
-          </div>  
-        <!-- Photo by <a href="https://unsplash.com/@parkergibbons?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Parker Gibbons</a> on <a href="https://unsplash.com/photos/aerial-photography-green-and-white-concrete-building-kfwPJieZVwI?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>-->
-    </section>
-
-    <section id="grid6">
-        <div class="image-container">
-            <img src="assets/images/students.jpeg" alt="students" id="img_student">
-            <div class="image-text">
-              <h3>Studentkåren</h3>
-            </div>
-          </div>  
-        <!--Photo by <a href="https://unsplash.com/@timmossholder?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Tim Mossholder</a> on <a href="https://unsplash.com/photos/photography-of-five-people-near-outdoor-during-daytime-hOF1bWoet_Q?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>-->
-    </section>
+  <section id="grid6">
+    <div class="image-container">
+      <img src="assets/images/students.jpeg" alt="students" id="img_student">
+      <div class="image-text">
+        <h3>Studentkåren</h3>
+      </div>
+    </div>
+    Photo by <a
+      href="https://unsplash.com/@timmossholder?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Tim
+      Mossholder</a> on <a
+      href="https://unsplash.com/photos/photography-of-five-people-near-outdoor-during-daytime-hOF1bWoet_Q?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+  </section>
 
 </main>
-
-
