--- a/src/app/courselist/courselist.component.css
+++ b/src/app/courselist/courselist.component.css
@@ -96,6 +96,12 @@ select {
     color: rgb(243, 146, 18);
 }
 
+.added-course-message {
+    padding: 20px 0 0 50px;
+    font-size: 18px;
+    color: rgb(243, 146, 18);
+}
+
 .pagination {
     padding:10px 15px;
     color: #000;
